--- a/pom.xml
+++ b/pom.xml
@@ -95,6 +95,21 @@
             <version>3.2.3</version>
             <scope>compile</scope>
         </dependency>
+
+        <!--加密解密库-->
+        <!-- Source: https://mvnrepository.com/artifact/org.jasypt/jasypt -->
+        <dependency>
+            <groupId>org.jasypt</groupId>
+            <artifactId>jasypt</artifactId>
+            <version>1.9.3</version>
+            <scope>compile</scope>
+        </dependency>
+
+        <!--参数自动校验框架-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
