--- a/pom.xml
+++ b/pom.xml
@@ -138,6 +138,14 @@
             <version>3.5.16</version>
         </dependency>
 
+        <!--jwt依赖-->
+        <!-- Source: https://mvnrepository.com/artifact/com.auth0/java-jwt -->
+        <dependency>
+            <groupId>com.auth0</groupId>
+            <artifactId>java-jwt</artifactId>
+            <version>4.5.0</version>
+        </dependency>
+
         <!--SpringAOP-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
